lab 2.1 sonar